#21 Fix tabs losing margin on smaller screens

--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -7,10 +7,8 @@
             border: none;
             background: transparent;
 
-            @media (min-width: 1200px) {
-                &:not(:last-child) {
-                    margin-right: 1.5rem;
-                }
+            &:not(:last-child) {
+                margin-right: 1.5rem;
             }
 
             &.active {
